# Seahorse

./: Cargo.toml  README.md
crates/seahorse-cli/: Cargo.toml
crates/seahorse-core/: Cargo.toml
crates/seahorse-server/: Cargo.toml
crates/seahorse-server/src/: app.rs  config.rs  lib.rs  main.rs
crates/seahorse-server/src/api/: mod.rs  observability.rs
crates/seahorse-server/src/handlers/: forget.rs  health.rs  ingest.rs  jobs.rs  live.rs  metrics.rs  mod.rs  ready.rs  rebuild.rs  recall.rs  stats.rs
crates/seahorse-server/src/state/: mod.rs
crates/seahorse-server/tests/: api_contract.rs  fault_recovery.rs  lifecycle_e2e.rs  perf_baseline.rs  runtime_config.rs
crates/seahorse-server/tests/fixtures/: seahorse.test.toml
docs/: README.md  design-all.md  mvp-agent-handoff.md  mvp-agent-prompts-batch1.md  mvp-agent-prompts-batch2.md  mvp-agent-prompts-batch3.md  mvp-agent-prompts-batch4.md  mvp-config.example.toml  mvp-design-and-roadmap.md  mvp-final-design.md  mvp-first-batch-issues.md  mvp-issue-breakdown.md  mvp-openapi.yaml  mvp-release-checklist.md  mvp-schema.sql  seahorse-final-architecture.md  seahorse-final-vision.md
docs/handoff/: 2026-03-21-next-start.md  2026-04-22-design-all-next-start.md  2026-04-22-mvp-release-handoff.md
docs/reports/: 2026-03-26-mvp-release-readiness.md
docs/runbooks/: mvp-alert-rules.example.yaml  mvp-deploy-backup-rollback.md  (+2 more)
migrations/: 0001_init.sql  0002_relax_dedup_constraints.sql  0003_design_all_phase1.sql  0004_connectome.sql
scripts/: check-mvp-docs.ps1  run-mvp-release-validation.ps1
(+39 files in other folders)
