[package]
name = "seahorse-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
seahorse-core = { path = "../seahorse-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
